src/metrics/snapshots/big_code_analysis__metrics__npa__tests__go_npa_excludes_unexported.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 4.0,
  "interfaces": 0.0,
  "class_attributes": 7.0,
  "interface_attributes": 0.0,
  "class_cda": 0.5714285714285714,
  "interface_cda": 0.0,
  "total": 4.0,
  "total_attributes": 7.0,
  "cda": 0.5714285714285714
}
