src/metrics/snapshots/big_code_analysis__metrics__npa__tests__go_top_level_var_const_not_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "class_npa_sum": 0,
  "interface_npa_sum": 0,
  "class_attributes": 0,
  "interface_attributes": 0,
  "class_cda": 0.0,
  "interface_cda": 0.0,
  "total": 0,
  "total_attributes": 0,
  "cda": 0.0
}
