src/metrics/snapshots/big_code_analysis__metrics__npa__tests__kotlin_class_with_methods_no_attrs.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 0.0,
  "interfaces": 0.0,
  "class_attributes": 0.0,
  "interface_attributes": 0.0,
  "classes_average": 0.0,
  "interfaces_average": 0.0,
  "total": 0.0,
  "total_attributes": 0.0,
  "average": 0.0
}
