src/metrics/snapshots/big_code_analysis__metrics__npa__tests__kotlin_data_class_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 2,
  "interfaces": 0,
  "class_attributes": 2,
  "interface_attributes": 0,
  "class_cda": 1.0,
  "interface_cda": 0.0,
  "total": 2,
  "total_attributes": 2,
  "cda": 1.0
}
