src/metrics/snapshots/big_code_analysis__metrics__npa__tests__kotlin_inner_class_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 2.0,
  "interfaces": 0.0,
  "class_attributes": 2.0,
  "interface_attributes": 0.0,
  "class_cda": 1.0,
  "interface_cda": 0.0,
  "total": 2.0,
  "total_attributes": 2.0,
  "cda": 1.0
}
