src/metrics/snapshots/big_code_analysis__metrics__npa__tests__kotlin_interface_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 0.0,
  "interfaces": 2.0,
  "class_attributes": 0.0,
  "interface_attributes": 2.0,
  "class_cda": 0.0,
  "interface_cda": 1.0,
  "total": 2.0,
  "total_attributes": 2.0,
  "cda": 1.0
}
