src/metrics/snapshots/big_code_analysis__metrics__npa__tests__kotlin_multiple_classes_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 3.0,
  "interfaces": 0.0,
  "class_attributes": 4.0,
  "interface_attributes": 0.0,
  "class_cda": 0.75,
  "interface_cda": 0.0,
  "total": 3.0,
  "total_attributes": 4.0,
  "cda": 0.75
}
