src/metrics/snapshots/big_code_analysis__metrics__npa__tests__kotlin_object_singleton_attributes.snap
---
source: src/metrics/npa.rs
expression: metric.npa
---
{
  "classes": 2.0,
  "interfaces": 0.0,
  "class_attributes": 3.0,
  "interface_attributes": 0.0,
  "classes_average": 0.6666666666666666,
  "interfaces_average": null,
  "total": 2.0,
  "total_attributes": 3.0,
  "average": 0.6666666666666666
}
